--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -9,6 +9,8 @@ body {
   background: rgb(23 25 26);
   font-family: sans-serif;
   overflow-y: scroll;
+  margin-top: 0;
+  margin-bottom: 0;
   /* overflow-y: hidden;
   display: flex;
   justify-content: center;
