--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -4,7 +4,7 @@
  */
 body {
   /* color: white; */
-  background: rgb(23 25 26) !important;
+  /* background: rgb(23 25 26) !important; */
   /* font-family: sans-serif;
   overflow-y: scroll;
   margin-top: 0;
